Fix horizontal scroll on mobile

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -1,5 +1,6 @@
 html {
 	background: $background;
+	overflow-x: hidden;
 }
 
 html, body {
